Update Business Analytics using Deep Learning in Tensorflow and Keras.ipynb

--- a/Business Analytics using Deep Learning in Tensorflow and Keras.ipynb
+++ b/Business Analytics using Deep Learning in Tensorflow and Keras.ipynb
@@ -21,7 +21,7 @@
    "id": "21e8a001",
    "metadata": {},
    "source": [
-    "The objective is to predict the loan status as either Good or Bad. The analysis is performed using TensorFlow and Keras in Python."
+    "The objective is to predict the loan status as either Good or Bad. The analysis is performed using TensorFlow and Keras in Python. The dataset is available on Kaggle"
    ]
   },
   {
